Update metric to rm heavy punctuated reviews
Use 99 percentile instead of a fixed threshold

--- a/NLP/dev-workspace/topic_modelling/lda_dev/lda_training.ipynb
+++ b/NLP/dev-workspace/topic_modelling/lda_dev/lda_training.ipynb
@@ -215,7 +215,7 @@
     "\n",
     "# this further remove ~7.4K reviews\n",
     "\n",
-    "dataset = dataset[dataset['alphabet_ratio'] < 0.19]"
+    "dataset = dataset[dataset['alphabet_ratio'] < dataset.alphabet_ratio.quantile(0.99)]"
    ]
   },
   {
