Add support to split sentences by token length
There are reviews that its token length may exceed the token length limit of the sbert model, resulting in tokens being truncated.

To handle that, reviews are split according to the token limits. Tokens without truncation are first generated, then spitted by the limit of the sbert model. Then the split reviews are regenerated from the tokens. Although the spacing btw words are not preserved, the resulting sbert embedding are still the same (verified by np.assert_allclose())

--- a/NLP/dev-workspace/topic_modelling/bertopic_dev/bertopic_embedding_imp.ipynb
+++ b/NLP/dev-workspace/topic_modelling/bertopic_dev/bertopic_embedding_imp.ipynb
@@ -11618,17 +11618,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map:   0%|          | 0/40 [00:00<?, ? examples/s]Token indices sequence length is longer than the specified maximum sequence length for this model (914 > 512). Running this sequence through the model will result in indexing errors\n",
-      "Map: 100%|██████████| 40/40 [00:00<00:00, 1282.51 examples/s]\n",
-      "Map: 100%|██████████| 40/40 [00:00<00:00, 2601.72 examples/s]\n",
-      "Batches: 100%|██████████| 4/4 [00:00<00:00, 16.72it/s]\n"
+      "Map:   0%|          | 0/718440 [00:00<?, ? examples/s]Token indices sequence length is longer than the specified maximum sequence length for this model (914 > 512). Running this sequence through the model will result in indexing errors\n",
+      "Map: 100%|██████████| 718440/718440 [01:23<00:00, 8602.20 examples/s] \n",
+      "Map: 100%|██████████| 718440/718440 [00:34<00:00, 20634.25 examples/s]\n",
+      "Batches: 100%|██████████| 24484/24484 [04:07<00:00, 98.81it/s] \n"
      ]
     }
    ],
@@ -11652,8 +11652,8 @@
     "\n",
     "# Sentences we want sentence embeddings for\n",
     "new_sentences = []\n",
-    "# sentences = X\n",
-    "sentences = X_longtext[:40]\n",
+    "sentences = X\n",
+    "# sentences = X_longtext[:40]\n",
     "# sentences = X_shorttext[:10]\n",
     "\n",
     "# Load model from HuggingFace Hub\n",
