WIP tm eval scripts

--- a/NLP/dev-workspace/topic_modelling/ctm_dev/ctm_eval.ipynb
+++ b/NLP/dev-workspace/topic_modelling/ctm_dev/ctm_eval.ipynb
@@ -148,8 +148,10 @@
    "outputs": [],
    "source": [
     "# create a copy of the dataset, as we need both untouched text and cleaned text\n",
+    "# also a copy for eval with LLM\n",
     "\n",
-    "dataset_preprocessed = dataset.copy()"
+    "dataset_preprocessed = dataset.copy()\n",
+    "dataset_eval = dataset.copy()"
    ]
   },
   {
@@ -179,7 +181,20 @@
    "outputs": [],
    "source": [
     "assert X_temp.shape == X_preprocessed_temp.shape, \"X_temp and X_preprocessed_temp should have the same shape. Found: {} and {}\".format(X_temp.shape, X_preprocessed_temp.shape)\n",
-    "assert len(X_temp) == len(X_preprocessed_temp), \"X_temp and X_preprocessed_temp should have the same length. Found: {} and {}\".format(len(X_temp), len(X_preprocessed_temp))"
+    "assert len(X_temp) == len(X_preprocessed_temp), \"X_temp and X_preprocessed_temp should have the same length. Found: {} and {}\".format(len(X_temp), len(X_preprocessed_temp))\n",
+    "\n",
+    "# additional test so that we can use the df to keep track with the document id for LLM topic creation\n",
+    "assert len(X_temp) == len(dataset), \"X_temp and dataset should have the same length. Found: {} and {}\".format(len(X_temp), len(dataset))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_eval['review_text_cleaned'] = X_preprocessed_temp\n",
+    "dataset_eval['review_text_cleaned_little'] = X_temp"
    ]
   },
   {
@@ -190,14 +205,33 @@
    "source": [
     "# remove docs with 0 len\n",
     "\n",
-    "X, X_preprocessed = [], []\n",
+    "# X, X_preprocessed = [], []\n",
     "\n",
-    "for i, (doc, doc_preprocessed) in enumerate(zip(list(X_temp), list(X_preprocessed_temp))):\n",
-    "    if len(doc) == 0 or len(doc_preprocessed) == 0:\n",
-    "        continue\n",
+    "# for i, (doc, doc_preprocessed) in enumerate(zip(list(X_temp), list(X_preprocessed_temp))):\n",
+    "#     if len(doc) == 0 or len(doc_preprocessed) == 0:\n",
+    "#         continue\n",
     "\n",
-    "    X.append(doc)\n",
-    "    X_preprocessed.append(doc_preprocessed)"
+    "#     X.append(doc)\n",
+    "#     X_preprocessed.append(doc_preprocessed)\n",
+    "\n",
+    "# deal with dataset_eval\n",
+    "index_to_remove = []\n",
+    "\n",
+    "for index, row in dataset_eval.iterrows():\n",
+    "    if len(row['review_text_cleaned_little']) == 0 or len(row['review_text_cleaned']) == 0:\n",
+    "        index_to_remove.append(index)\n",
+    "\n",
+    "dataset_eval = dataset_eval.drop(index_to_remove)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Removed {} documents with 0 length\".format(len(index_to_remove)))\n",
+    "print(len(dataset_eval))"
    ]
   },
   {
@@ -216,7 +250,7 @@
     }
    ],
    "source": [
-    "assert len(X) == len(X_preprocessed), \"X and X_preprocessed should have the same length. Found: {} and {}\".format(len(X), len(X_preprocessed))"
+    "# assert len(X) == len(X_preprocessed), \"X and X_preprocessed should have the same length. Found: {} and {}\".format(len(X), len(X_preprocessed))"
    ]
   },
   {
@@ -278,8 +312,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_preprocessed = list(map(lambda x: lemmatization(x), X_preprocessed))\n",
-    "X_preprocessed = list(map(lambda x: ' '.join(x), X_preprocessed))"
+    "from datasets import Dataset\n",
+    "\n",
+    "# X_preprocessed = list(map(lambda x: lemmatization(x), X_preprocessed))\n",
+    "# X_preprocessed = list(map(lambda x: ' '.join(x), X_preprocessed))\n",
+    "\n",
+    "def lemmatization_dataset(data):\n",
+    "    return {'review_text2': ' '.join(lemmatization(data['review_text']))}\n",
+    "\n",
+    "temp_dataset = Dataset.from_dict({'review_text': dataset_eval['review_text_cleaned']})\n",
+    "temp_dataset = temp_dataset.map(lemmatization_dataset, num_proc=4)      # speed up lemmatization\n",
+    "X_preprocessed = temp_dataset['review_text2']\n",
+    "\n",
+    "dataset_eval['review_text_cleaned'] = X_preprocessed"
    ]
   },
   {
@@ -324,11 +369,111 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch\n",
+    "import platform\n",
+    "if platform.system() == 'Linux' or platform.system() == 'Windows':\n",
+    "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "else:\n",
+    "    device = torch.device('mps')        # m-series mac machine\n",
+    "\n",
+    "print(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# copy from ctm_training.ipynb\n",
+    "\n",
+    "from tqdm.autonotebook import trange\n",
+    "\n",
+    "def split_X_contextual_X_bow(X_contextual, X_bow, X, sbert, split:bool=False):\n",
+    "    if not split:\n",
+    "        return X_contextual, X_bow, X\n",
+    "    else:\n",
+    "        X_contextual_new, X_bow_new, X_new = [], [], []\n",
+    "        tokenizer = sbert[0].tokenizer\n",
+    "\n",
+    "        batch_size = 64\n",
+    "        for start_index in trange(0, len(X_contextual), batch_size, desc=\"Batches\", disable=False):\n",
+    "            sentence_batch = X_contextual[start_index:start_index+batch_size]\n",
+    "            features = tokenizer(sentence_batch, return_attention_mask=True, return_token_type_ids=True, add_special_tokens=False, return_tensors=None, truncation=False)\n",
+    "\n",
+    "            # split overlapping\n",
+    "            features_split = split_tokens_into_smaller_chunks(features, sbert.max_seq_length-2,  sbert.max_seq_length-2, 1)\n",
+    "\n",
+    "            for i, input_id_list in enumerate(features_split['input_ids']):\n",
+    "                for input_id in input_id_list:\n",
+    "                    X_contextual_new.append(tokenizer.convert_tokens_to_string(tokenizer.convert_ids_to_tokens(input_id)))\n",
+    "                    X_bow_new.append(X_bow[start_index+i])\n",
+    "                    X_new.append(X[start_index+i])\n",
+    "\n",
+    "\n",
+    "        assert len(X_contextual_new) == len(X_bow_new), \"X_contextual_new and X_bow_new should have the same length. Found: {} and {}\".format(len(X_contextual_new), len(X_bow_new))\n",
+    "        assert len(X_contextual_new) == len(X_new), \"X_contextual_new and X_new should have the same length. Found: {} and {}\".format(len(X_contextual_new), len(X_new))\n",
+    "        return X_contextual_new, X_bow_new, X_new\n",
+    "    \n",
+    "# ####################\n",
+    "# # helper functions\n",
+    "# ####################\n",
+    "    \n",
+    "# tokens spliting helper functions\n",
+    "\n",
+    "def split_tokens_into_smaller_chunks(\n",
+    "    data,\n",
+    "    chunk_size: int,\n",
+    "    stride: int,\n",
+    "    minimal_chunk_length: int,\n",
+    ") -> dict:\n",
+    "    \"\"\"Splits tokens into overlapping chunks with given size and stride.\"\"\"\n",
+    "\n",
+    "    _new_input_id_chunks = []\n",
+    "    _new_token_type_ids = []\n",
+    "    _new_mask_chunks = []\n",
+    "\n",
+    "    for input_id, token_type_id, mask_chunk in zip(data['input_ids'], data['token_type_ids'], data['attention_mask']):\n",
+    "        _input_id_chunk = split_overlapping(input_id, chunk_size, stride, minimal_chunk_length)\n",
+    "        _token_type_id = split_overlapping(token_type_id, chunk_size, stride, minimal_chunk_length)\n",
+    "        _mask_chunk = split_overlapping(mask_chunk, chunk_size, stride, minimal_chunk_length)\n",
+    "\n",
+    "        _new_input_id_chunks.append(_input_id_chunk)\n",
+    "        _new_token_type_ids.append(_token_type_id)\n",
+    "        _new_mask_chunks.append(_mask_chunk)    \n",
+    "\n",
+    "    return {'input_ids':_new_input_id_chunks, 'token_type_ids':_new_token_type_ids, 'attention_mask': _new_mask_chunks}\n",
+    "\n",
+    "def split_overlapping(tensor:list[int], chunk_size: int, stride: int, minimal_chunk_length: int) -> list[list[int]]:\n",
+    "    \"\"\"Helper function for dividing 1-dimensional tensors into overlapping chunks.\"\"\"\n",
+    "    # check_split_parameters_consistency(chunk_size, stride, minimal_chunk_length)\n",
+    "    result = [tensor[i : i + chunk_size] for i in range(0, len(tensor), stride)]\n",
+    "    if len(result) > 1:\n",
+    "        # ignore chunks with less than minimal_length number of tokens\n",
+    "        result = [x for x in result if len(x) >= minimal_chunk_length]\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "def tokenize_dataset(data, tokenizer):\n",
+    "    # return sbert_model[0].tokenizer(data['text'], return_attention_mask=True, return_token_type_ids=True, add_special_tokens=False, return_tensors=None, truncation=False)\n",
+    "    return {'tokenized': tokenizer(data['text'], return_attention_mask=True, return_token_type_ids=True, add_special_tokens=False, return_tensors=None, truncation=False)}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# load the model from disk to compare the results\n",
     "\n",
     "search_behaviour = SEARCH_BEHAVIOUR.GRID_SEARCH\n",
+    "split_sentences = True\n",
+    "sbert_model_name = 'all-MiniLM-L6-v2'\n",
+    "\n",
+    "\n",
     "training_datetime = datetime(2024, 1, 29, 21, 29, 10)\n",
-    "training_folder = Path(f'ctm_{search_behaviour.value}_{training_datetime.strftime(\"%Y%m%d_%H%M%S\")}')\n",
+    "training_folder = Path(f'ctm{\"[split]\" if split_sentences else \"\"}_genre_{str(genre)}_{search_behaviour.value}_{training_datetime.strftime(\"%Y%m%d_%H%M%S\")}')\n",
     "\n",
     "training_result_json_path = training_folder.joinpath('result.json')\n",
     "with open(training_result_json_path, 'r') as f:\n",
@@ -357,6 +502,15 @@
     "    X, X_preprocessed, \n",
     "    sbert_params, training_folder,\n",
     "    vectorizer=vectorizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# whether the model is trained with sentence-split or not"
    ]
   },
   {
