--- a/NLP/dev-workspace/topic_modelling/llm_demo_2024-01-22/ollama_demo.ipynb
+++ b/NLP/dev-workspace/topic_modelling/llm_demo_2024-01-22/ollama_demo.ipynb
@@ -540,7 +540,7 @@
    "source": [
     "file_dir_path = Path('cyberpunk_2077_phantom_liberty')\n",
     "\n",
-    "embedding_function = SentenceTransformerEmbeddings(model_name=\"all-MiniLM-L6-v2\")\n",
+    "embedding_function = SentenceTransformerEmbeddings(model_name=\"all-MiniLM-L6-v2\")           # TODO: change to ollama LLM embeddings due to context length \n",
     "\n",
     "loader = DirectoryLoader(str(file_dir_path), glob=\"./*.txt\", loader_cls=TextLoader)\n",
     "docs = loader.load()\n",
