Fix saving eval contextual embeddings
Fix the issue of saving split and not split embeddings with the same filename

--- a/NLP/dev-workspace/topic_modelling/ctm_dev/ctm_eval_quali.ipynb
+++ b/NLP/dev-workspace/topic_modelling/ctm_dev/ctm_eval_quali.ipynb
@@ -2157,11 +2157,11 @@
     "    training_result = json.load(f)\n",
     "\n",
     "\n",
-    "# load the embeddings\n",
-    "model_name_or_path = training_result['best_hyperparameters']['sbert_params']['model_name_or_path']\n",
-    "embeddings_path = training_folder.joinpath(f'embeddings_{model_name_or_path}.pkl')\n",
-    "with open(embeddings_path, 'rb') as f:\n",
-    "    embeddings = np.load(f)\n",
+    "# load the embeddings (training)\n",
+    "# model_name_or_path = training_result['best_hyperparameters']['sbert_params']['model_name_or_path']\n",
+    "# embeddings_path = training_folder.joinpath(f'embeddings_{model_name_or_path}.pkl')\n",
+    "# with open(embeddings_path, 'rb') as f:\n",
+    "#     embeddings = np.load(f)\n",
     "\n",
     "best_model_path = training_result['best_model_checkpoint']\n",
     "ctm_hyperparameters = training_result['best_hyperparameters']['ctm_params']\n",
@@ -2179,7 +2179,7 @@
     "    sbert_params, training_folder,\n",
     "    vectorizer=vectorizer,\n",
     "    X_contextual_embedding_path = Path(best_model_path).parent.parent.joinpath('preprocessed_data').joinpath(\n",
-    "        f'{genre.value:02}_{str(genre)}_X_contextual_embeddings.npy')\n",
+    "        f'{genre.value:02}_{str(genre)}_dataset_eval{\"_[split]\" if split_sentences else \"\"}_X_contextual_embeddings.npy')       # attempt to get existing embeddings for evaluation\n",
     "    )"
    ]
   },
@@ -2192,7 +2192,7 @@
     "# save the embeddings for later use\n",
     "X_contextual_embeddings_path_p = Path(best_model_path).parent.parent.joinpath('preprocessed_data')\n",
     "X_contextual_embeddings_path = X_contextual_embeddings_path_p.joinpath(\n",
-    "    f'{genre.value:02}_{str(genre)}_X_contextual_embeddings.npy')\n",
+    "    f'{genre.value:02}_{str(genre)}_dataset_eval{\"_[split]\" if split_sentences else \"\"}_X_contextual_embeddings.npy')       # save the embeddings for future evaluation\n",
     "\n",
     "if not X_contextual_embeddings_path_p.exists():\n",
     "    X_contextual_embeddings_path_p.mkdir(parents=True)\n",
