run cross-model quan eval, and lda quali eval

--- a/NLP/dev-workspace/topic_modelling/lda_dev/lda_eval_quali.ipynb
+++ b/NLP/dev-workspace/topic_modelling/lda_dev/lda_eval_quali.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# constants\n",
+    "# constants for loading the dataset\n",
     "\n",
     "genre = GENRES.INDIE\n",
     "unique_list = ['review_text']"
@@ -78,6 +78,13 @@
     "Load the dataset from raw, and keep track with the avaiilable index during processing\n",
     "\n",
     "Processing is copied from the training script"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the genre / all dataset"
    ]
   },
   {
@@ -119,6 +126,20 @@
     "dataset_untouched = dataset.copy()\n",
     "\n",
     "dataset.info(verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cleaning"
    ]
   },
   {
@@ -281,10 +302,10 @@
    "outputs": [],
    "source": [
     "# save this dataset for evaluation usage\n",
-    "dataset_eval_path = Path('category_indie_unique_review_text').joinpath(\n",
-    "    Path(f'lemmatized_data/{genre.value:02}_{str(genre)}_dataset_eval.pkl')\n",
-    ")\n",
-    "dataset.to_pickle(dataset_eval_path)"
+    "# dataset_eval_path = Path('category_indie_unique_review_text').joinpath(\n",
+    "#     Path(f'lemmatized_data/{genre.value:02}_{str(genre)}_dataset_eval.pkl')\n",
+    "# )\n",
+    "# dataset.to_pickle(dataset_eval_path)"
    ]
   },
   {
@@ -540,6 +561,7 @@
    "source": [
     "# load the best model from training folder\n",
     "\n",
+    "genre = GENRES.INDIE\n",
     "reuse_corpus = False\n",
     "training_datetime = datetime(2024, 2, 17, 1, 18, 55)\n",
     "\n",
