Create quant and quali eval of all models in all datasets

--- a/NLP/dev-workspace/topic_modelling/tm_external_test/ctm_external_doc_quali.ipynb
+++ b/NLP/dev-workspace/topic_modelling/tm_external_test/ctm_external_doc_quali.ipynb
@@ -2936,6 +2936,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since there is no way to update the topic keywords with the new reviews, we generate the keywords using LLM, then explicitly told the LLM to output the label using the keywords and the representative docs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
