--- a/NLP/dev-workspace/topic_modelling/tm_external_test/bertopic_external_doc_smallgames_quali.ipynb
+++ b/NLP/dev-workspace/topic_modelling/tm_external_test/bertopic_external_doc_smallgames_quali.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -97,6 +97,12 @@
     "\n",
     "# game_steamid = 1814540\n",
     "# game_name = 'cosmos_conquer'\n",
+    "\n",
+    "# game_steamid = 1814520\n",
+    "# game_name = 'find_the_cat'\n",
+    "\n",
+    "# game_steamid = 1814480\n",
+    "# game_name = 'fourplay_chess'\n",
     "\n",
     "# game_steamid = 1757970\n",
     "# game_name = 'oasis_dark_forest'\n",
@@ -131,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +378,7 @@
        "14                    Of course I recommend the game!  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -496,9 +502,9 @@
      "output_type": "stream",
      "text": [
       "Map:   0%|          | 0/15 [00:00<?, ? examples/s]Token indices sequence length is longer than the specified maximum sequence length for this model (1560 > 512). Running this sequence through the model will result in indexing errors\n",
-      "Map: 100%|██████████| 15/15 [00:00<00:00, 2511.16 examples/s]\n",
-      "Map: 100%|██████████| 15/15 [00:00<00:00, 4942.62 examples/s]\n",
-      "Batches: 100%|██████████| 1/1 [00:00<00:00,  3.34it/s]"
+      "Map: 100%|██████████| 15/15 [00:00<00:00, 2441.48 examples/s]\n",
+      "Map: 100%|██████████| 15/15 [00:00<00:00, 4202.43 examples/s]\n",
+      "Batches: 100%|██████████| 1/1 [00:00<00:00,  7.34it/s]"
      ]
     },
     {
@@ -550,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +920,7 @@
        "14                    of course i recommend the game!  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -1034,14 +1040,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-15 00:08:08,117 - BERTopic - Predicting topic assignments through cosine similarity of topic and document embeddings.\n"
+      "2024-03-15 00:45:07,971 - BERTopic - Predicting topic assignments through cosine similarity of topic and document embeddings.\n"
      ]
     }
    ],
@@ -1074,19 +1080,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../eval_results_external/yavi\n"
+      "../eval_results_external/yavi/category_indie_unique_review_text/bertopic[split]_genre_indie_grid_search_20240214_111556/bertopic_bt_nr_topics_30\n"
      ]
     }
    ],
    "source": [
     "eval_results_external_folder_path = Path(f'../eval_results_external/{game_name}')\n",
+    "\n",
+    "eval_results_external_folder_path = eval_results_external_folder_path.joinpath(\n",
+    "    *best_model_checkpoint_path.parts[2:]\n",
+    ")\n",
     "\n",
     "print(eval_results_external_folder_path)\n",
     "\n",
@@ -1096,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1175,7 +1185,7 @@
        "6     18      5"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1296,7 @@
        " '29': 'Toilet Disaster'}"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1302,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -1384,6 +1394,111 @@
     "    # print(f'Prob: {prob}')\n",
     "    print(f'Review: {X[i]}')\n",
     "    print('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: {'topic': 0,\n",
+       "  'topic_label': 'Friendly Fun',\n",
+       "  'review': \"neat pokemon - like game, it ' s really fun and the monsters are really cool and interesting. it feels polished but there are some aspects that yet feel unfinished, overall i ' d say it ' s worth it to give it a try if you are into this type of games\"},\n",
+       " 1: {'topic': -1,\n",
+       "  'topic_label': 'Challenging Fun',\n",
+       "  'review': \"okay - the game is interesting and i like the humour and the signs telling you facts you would rather not read but the music is very repetitive and annoying. it ' s sounds interesting and kind of cool but only for a short time before i hate hearing it. it also doesn ' t alive enough if that makes sense. a lot of similar games are just walking simulators ( they shouldn ' t be ) but this game has that annoying wandering around feeling that i hate. not all games in this genre feel like that.\"},\n",
+       " 2: {'topic': 0,\n",
+       "  'topic_label': 'Friendly Fun',\n",
+       "  'review': 'originally a game that went free. the battles are pretty boring with a lot of the fights being against the same enemies, terrible to look at, and the music is annoying.'},\n",
+       " 3: {'topic': -1,\n",
+       "  'topic_label': 'Challenging Fun',\n",
+       "  'review': \"pokemon - style game as interplanet delivery boy. graphics are fine. the first chords of the music are fine until you realise that ' s the entire song made in a loop. this might have been okay thirty years ago. [ table ] [ tr ] [ td ] [ i ] more reviews at [ url = / ] omnivore gamer [ / url ], games that are easy to control ( for handicapped gamers ). [ / i ] [ / td ] [ / tr ] [ / table ]\"},\n",
+       " 4: {'topic': 6,\n",
+       "  'topic_label': 'Good Story',\n",
+       "  'review': 'cute sprites. amusing dialogues. moody music.'},\n",
+       " 5: {'topic': 18,\n",
+       "  'topic_label': 'Sexy Anime',\n",
+       "  'review': \"this is a very very skeptical usually go for the better option when i ' m on the fence, but this just gets to me in a bad way. i went into this thinking i was getting a creature collector game, and this is not one in the slightest. it ' s okay for what it is, which is a rpg, but i have problems with the format. there ' s a lot about this game that i want to discuss that may change your minds if you were looking into it, and this would be the perfect example of a neutral option for recommendations. i ' m not doing pros / cons because some things others would see as pros i hate, and some cons i like for this no aspect of you collecting. you get robots, sure, but not in a sense where you can go out, collect a ton of them, then form a party based on what you would need in the situation unfolding. it ' s more like a rpg with creature collector elements. there ' s weaknesses and buffs against types, and that ' s what makes it feel like a creature collector. i ' ll explain this more so you can completely you get a robot to fight with in the beginning of the game - you fight a ton of np\"},\n",
+       " 6: {'topic': 18,\n",
+       "  'topic_label': 'Sexy Anime',\n",
+       "  'review': \"##cs with a robot of their own - you then save up enough to get a voucher to get another robot, which there is always 4 choices for, but almost never the same choices - you can only get 1 robot per junkyard. i ' m 3 hours in and have just gotten my 4th robot. that brings the tally up to one robot per hour of gameplay excluding the first one you get to be able to play that is not a creature collector format in the game is very linear. it blocks you from going places with npcs constantly ( and by constantly i mean every few steps ), or gives you the runaround with fetch quests to unlock a door or other slow progressing options. there ' s no run option, and driving is just as slow as walking. they give you the option to heal your party at these healing stations that are a bit more reasonable to get to, but then charge you more to use a healing station over going to a workshop and getting them fixed there, so since money is fairly scarce, i ' ve always opted to walk to the workshop to heal, which usually needs to happen after every fight. this causes a bunch of boring walking back and forth, and there ' s no item to equip to move faster or\"},\n",
+       " 7: {'topic': 13,\n",
+       "  'topic_label': 'Salem Prison Escape',\n",
+       "  'review': \"to use to teleport you to the workshops to make this trip one sided either. going back to locked areas, i can understand locking people out of places to keep them from stronger danger, but this isn ' t even the reason. everything i ' ve run into so far has been able to be beaten by low levels if you have type advantage, which makes sense because if you couldn ' t, you would be softlocked by battles once the enemy had type advantage over your party since you don ' t get a wide variety to switch between. you can ' t walk past a single npc fight, they block you from progressing until you beat them. this is every single fight. so the playthrough consists of this ; - get a robot - fight one of the 5 enemies otw to the next set of buildings. earn around 10g - go back to heal because if you don ' t you ' ll lose the next fight. costs 5g - fight the second fight. earn around 10g - walk back to heal. costs 5g - fight the third fight. earn around 10g - find a chest with an item that can heal you so maybe help you not walk back once once you get an item to also restore your stamina\"},\n",
+       " 8: {'topic': 18,\n",
+       "  'topic_label': 'Sexy Anime',\n",
+       "  'review': '- walk back to heal. costs 5g i think you can see where this is going. this game is 95 % walking slowing to go heal or get into a forced fight, and once you fight the npcs once, that \\' s it. they \\' re now just there to get in your way as you walk slowly through the areas to try to progress your missions. there \\' s one npc in every town that you can \" train with \", by which i mean you can fight them over and over ; this is the only way to grind. there \\' s no random encounters, so if you got a lopsided team because you didn \\' t understand type effectiveness for this game, then this is the only way to get your robot to be better, and that \\' s only if you can beat the npc by them not having type advantage over think this needs a \" what can improve this game \" section. this is for improving this game without changing it \\' s format ( if it was more fixed it so you didn \\' t have to heal after every fight, that would mean changing the entire game, so i \\' m not going to be discussing things like that ) - running! please give us faster movement - more money per fight or make healing'},\n",
+       " 9: {'topic': 4,\n",
+       "  'topic_label': 'VR Truck Simulator',\n",
+       "  'review': \"stations as affordable as workshops ( this also stems from having to move so much so slowly ) - items of equipment for faster movement - get rid of fetch quests that serve no purpose ( having to walk back across the map to get a battery to leave after walking across the map to leave to begin with was just stupidly frustrating, especially since there was nothing that happened besides dialogue that could ' ve been completely avoided, making the entire trip take double the time ) - give us faster movement! - let us activate npc battles between sections instead of locking us into every single fight, then have them be able to be fought multiple times. this would get rid of having to have so many healing stations, cause less walking back and forth, and give people the option to grind ( if they want to ) with multiple battles instead of just one per section. this would be the biggest thing that could fix the game in it ' s current stance imo. you could still have necessary battles, just not make every battle necessary. that could also give a bit more exploration and control into the linear aspect of the did i mention faster movement yet? i don ' t mean to be so negative in a review for a game that i feel like it could be a great game with some\"},\n",
+       " 10: {'topic': -1,\n",
+       "  'topic_label': 'Challenging Fun',\n",
+       "  'review': \"adjustments, but it ' s harder to discuss things games do right because they ' re things that are more expected than discussed. there ' s a lot about this game to like : - it has a solid foundation with a good premise for the game - it ' s balanced unless you make it unbalanced by not understanding how the game works - the writing is funny in a dad joke sense of humor and the storyline isn ' t boring even though it seems a bit ridiculous at times - the battles feel engaging and the strategies constantly change - the graphics fit well and gives a retro feel ( the battle animations are nice ) - it keeps you engaged ( aside from the constant walking ) - 0 bugs, and i ' m 3 hours in while over - exploring ( like trying to walk into the backs of buildings / trying to find a way to glitch past a npc so you ' re not stuck walking around their slow slow movement ) i am going to finish this game, and later into the game you do get more money and some items to heal so you ' re not walking back after every fight, but i ' m still feeling sluggish in the later areas even with this crutch. i hope that if this doesn ' t get improved in this\"},\n",
+       " 11: {'topic': -1,\n",
+       "  'topic_label': 'Challenging Fun',\n",
+       "  'review': \"game ( since it ' s already a finished game ) that if another one is being made, that these concepts are added to help the flow of the game feel less arduous\"},\n",
+       " 12: {'topic': -1,\n",
+       "  'topic_label': 'Challenging Fun',\n",
+       "  'review': \"i was given a copy of this game specifically to let ' s play it and i ended up really enjoying it! it ' s gameplay is very pokemon - inspired, and the story is pretty funny and interesting for how short it give this one a try.\"},\n",
+       " 13: {'topic': -1,\n",
+       "  'topic_label': 'Challenging Fun',\n",
+       "  'review': 'a cute little game that mixes pokemon - like mechanics with an interesting and comedic space mystery. i enjoyed playing it, and look forward to more from this dev!'},\n",
+       " 14: {'topic': 18,\n",
+       "  'topic_label': 'Sexy Anime',\n",
+       "  'review': 'if you take pokemon and replace pokemon with robots, add sci - fi genre, add awesome dialogues ( i recommend talking to every enemy at least twice ) add interesting plot - here it is - yavi. totally different game but obviously inspired by first pocket monster games.'},\n",
+       " 15: {'topic': -1,\n",
+       "  'topic_label': 'Challenging Fun',\n",
+       "  'review': \"never thought it ' s gonna be that engaging! the main characters are very well written and the gameplay is quite fun. i ' m looking forward to the sequel!\"},\n",
+       " 16: {'topic': 6,\n",
+       "  'topic_label': 'Good Story',\n",
+       "  'review': 'just started, but is a good one so far.'},\n",
+       " 17: {'topic': 18,\n",
+       "  'topic_label': 'Sexy Anime',\n",
+       "  'review': \"great pixel - art design and hilarious dialogues! but most of all i loved the story. i haven ' t expect such good plot from this bought it just for robot - collecting / fighting and i ended up getting wait for the second part!\"},\n",
+       " 18: {'topic': 0,\n",
+       "  'topic_label': 'Friendly Fun',\n",
+       "  'review': 'i have a lot of fun playing yavi. i am reminded of my childhood when i played on a gameboy. great humor, and storyline is interesting. i always wanted to be a postman'},\n",
+       " 19: {'topic': 14,\n",
+       "  'topic_label': 'Short & Fun',\n",
+       "  'review': 'nice music and the story is great! and pretty funny : ) cant wait for the next part : o'},\n",
+       " 20: {'topic': 0,\n",
+       "  'topic_label': 'Friendly Fun',\n",
+       "  'review': 'of course i recommend the game!'}}"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# save the topic, original reviews as json\n",
+    "\n",
+    "topic_reviews_json = {}\n",
+    "\n",
+    "for i, (topic, prob) in enumerate(zip(topics, probs)):\n",
+    "    topic_reviews_json[i] = {\n",
+    "        'topic': topic.item(),\n",
+    "        'topic_label': topic_id_to_label_json[str(topic)],\n",
+    "        'review': X[i],\n",
+    "    }\n",
+    "\n",
+    "topic_reviews_json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "topic_reviews_json_path = eval_results_external_folder_path.joinpath('reviews_topic.json')\n",
+    "\n",
+    "with open(topic_reviews_json_path, 'w') as f:\n",
+    "    json.dump(topic_reviews_json, f, indent=2)"
    ]
   },
   {
