update sa models eval script & onnx conversion script

--- a/NLP/dev-workspace/sa/bert_2023-12-13/convert_to_onnx.ipynb
+++ b/NLP/dev-workspace/sa/bert_2023-12-13/convert_to_onnx.ipynb
@@ -15,38 +15,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "DATASET_SIZE = 480\n",
-    "DATASET_IS_BALANCED = False\n",
+    "DATASET_IS_BALANCED = True\n",
     "\n",
-    "training_name = 'bert-finetune_{}k_{}'.format(\n",
+    "training_name = 'bert-finetune_{}k_{}_{}'.format(\n",
     "    DATASET_SIZE,\n",
-    "    'bal' if DATASET_IS_BALANCED else 'imbal'\n",
+    "    'bal' if DATASET_IS_BALANCED else 'imbal',\n",
+    "    datetime(2024, 1, 18).strftime('%Y-%m-%d')\n",
     ")\n",
     "\n",
-    "training_args_datetime = datetime(year=2023, month=12, day=20)          # change the date to the date of training\n",
+    "# training_args_datetime = datetime(year=2023, month=12, day=20)          # change the date to the date of training\n",
     "training_storing_folder = Path(training_name).resolve()\n",
+    "\n",
+    "# model_path = Path.joinpath(\n",
+    "#         training_storing_folder, \n",
+    "#         '{}_{}_model'.format(training_name, training_args_datetime.strftime('%Y-%m-%d')))\n",
     "\n",
     "model_path = Path.joinpath(\n",
     "        training_storing_folder, \n",
-    "        '{}_{}_model'.format(training_name, training_args_datetime.strftime('%Y-%m-%d')))"
+    "        '{}_model'.format(training_name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'bert-finetune_480k_imbal_2023-12-20_model'"
+       "'bert-finetune_480k_bal_2024-01-18_model'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,13 +62,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/root/.local/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "2024-03-15 11:18:30.665820: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-03-15 11:18:30.884834: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-03-15 11:18:30.884867: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-03-15 11:18:30.922787: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-03-15 11:18:30.997618: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-03-15 11:18:31.715369: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
       "Framework not specified. Using pt to export to ONNX.\n",
       "Using the export variant default. Available variants are:\n",
       "    - default: The default ONNX variant.\n",
@@ -76,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving model to /root/FYP/NLP/dev-workspace/sa/bert_2023-12-13/bert-finetune_480k_imbal/bert-finetune_480k_imbal_2023-12-20_model_onnx\n"
+      "Saving model to /root/FYP/NLP/dev-workspace/sa/bert_2023-12-13/bert-finetune_480k_bal_2024-01-18/bert-finetune_480k_bal_2024-01-18_model_onnx\n"
      ]
     }
    ],
@@ -105,25 +119,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/root/miniforge3/envs/fyp-test2-wsl/lib/python3.9/site-packages/optimum/onnxruntime/configuration.py:770: FutureWarning: disable_embed_layer_norm will be deprecated soon, use disable_embed_layer_norm_fusion instead, disable_embed_layer_norm_fusion is set to True.\n",
+      "  warnings.warn(\n",
       "Optimizing model...\n",
-      "Configuration saved in /root/FYP/NLP/dev-workspace/sa/bert_2023-12-13/bert-finetune_480k_imbal/bert-finetune_480k_imbal_2023-12-20_model_onnx/ort_config.json\n",
-      "Optimized model saved at: /root/FYP/NLP/dev-workspace/sa/bert_2023-12-13/bert-finetune_480k_imbal/bert-finetune_480k_imbal_2023-12-20_model_onnx (external data format: False; saved all tensor to one file: True)\n"
+      "Configuration saved in /root/FYP/NLP/dev-workspace/sa/bert_2023-12-13/bert-finetune_480k_bal_2024-01-18/bert-finetune_480k_bal_2024-01-18_model_onnx/ort_config.json\n",
+      "Optimized model saved at: /root/FYP/NLP/dev-workspace/sa/bert_2023-12-13/bert-finetune_480k_bal_2024-01-18/bert-finetune_480k_bal_2024-01-18_model_onnx (external data format: False; saved all tensor to one file: True)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "PosixPath('/root/FYP/NLP/dev-workspace/sa/bert_2023-12-13/bert-finetune_480k_imbal/bert-finetune_480k_imbal_2023-12-20_model_onnx')"
+       "PosixPath('/root/FYP/NLP/dev-workspace/sa/bert_2023-12-13/bert-finetune_480k_bal_2024-01-18/bert-finetune_480k_bal_2024-01-18_model_onnx')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +202,7 @@
        "['input_ids', 'attention_mask', 'token_type_ids']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +222,7 @@
        "['logits']"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,15 +257,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([[-3.1710236,  3.2229025]], dtype=float32), array([[ 1.2209499 , -0.87591463]], dtype=float32), array([[ 0.76088977, -0.63426894]], dtype=float32)]\n",
-      "[array([[-3.1710243,  3.2229028]], dtype=float32), array([[ 1.22095  , -0.8759148]], dtype=float32), array([[ 0.76088965, -0.6342685 ]], dtype=float32)]\n"
+      "[array([[-2.3883157,  2.4536176]], dtype=float32), array([[ 1.5583036, -2.9529977]], dtype=float32), array([[ 0.69697875, -1.636167  ]], dtype=float32)]\n",
+      "[array([[-2.3883147,  2.4536157]], dtype=float32), array([[ 1.5583022, -2.9529963]], dtype=float32), array([[ 0.69697833, -1.6361668 ]], dtype=float32)]\n"
      ]
     }
    ],
@@ -280,6 +296,13 @@
     "for i in range(len(pred_hg)):\n",
     "    np.testing.assert_allclose(pred_hg[i], perd_onnx[i], rtol=1e-3, atol=1e-3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
