--- a/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/convert_to_onnx.ipynb
+++ b/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/convert_to_onnx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Training storing folder:\n",
-      "/root/FYP/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/tfidf-rf-20000_480k_imbal\n",
+      "/root/FYP/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/tfidf-rf-20000_480k_bal_2024-02-26\n",
       "\n",
       "\n",
       "\n"
@@ -31,22 +31,23 @@
     "from skl2onnx.common.data_types import StringTensorType\n",
     "\n",
     "DATASET_SIZE = 480\n",
-    "DATASET_IS_BALANCED = False\n",
+    "DATASET_IS_BALANCED = True\n",
     "\n",
     "\n",
     "MAX_FEATURES = 20000        # max_features params for CountVectorizer\n",
     "\n",
-    "training_name = 'tfidf-rf-{}_{}k_{}'.format(\n",
+    "training_args_datetime = datetime(year=2024, month=2, day=26)\n",
+    "training_name = 'tfidf-rf-{}_{}k_{}_{}'.format(\n",
     "    MAX_FEATURES,\n",
     "    DATASET_SIZE,\n",
-    "    'bal' if DATASET_IS_BALANCED else 'imbal'\n",
+    "    'bal' if DATASET_IS_BALANCED else 'imbal',\n",
+    "    training_args_datetime.strftime('%Y-%m-%d')\n",
     ")\n",
     "\n",
     "training_storing_folder = Path(f\"{training_name}/\").resolve()\n",
     "if not training_storing_folder.exists():\n",
     "    training_storing_folder.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "training_args_datetime = datetime(year=2023, month=12, day=20)\n",
     "\n",
     "print('Training storing folder:')\n",
     "print(training_storing_folder)\n",
@@ -55,16 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded model from /root/FYP/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/tfidf-rf-20000_480k_imbal/tfidf-rf-20000_480k_imbal_2023-12-20_model.sav\n",
-      "Loaded count vectorizer from /root/FYP/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/tfidf-rf-20000_480k_imbal/tfidf-rf-20000_480k_imbal_2023-12-20_count_vectorizer.pkl\n",
-      "Loaded tfidf transformer from /root/FYP/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/tfidf-rf-20000_480k_imbal/tfidf-rf-20000_480k_imbal_2023-12-20_tfidf.pkl\n"
+      "Loaded model from /root/FYP/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/tfidf-rf-20000_480k_bal_2024-02-26/tfidf-rf-20000_480k_bal_2024-02-26_model.sav\n",
+      "Loaded count vectorizer from /root/FYP/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/tfidf-rf-20000_480k_bal_2024-02-26/tfidf-rf-20000_480k_bal_2024-02-26_count_vectorizer.pkl\n",
+      "Loaded tfidf transformer from /root/FYP/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/tfidf-rf-20000_480k_bal_2024-02-26/tfidf-rf-20000_480k_bal_2024-02-26_tfidf.pkl\n"
      ]
     }
    ],
@@ -73,21 +74,21 @@
     "\n",
     "import pickle\n",
     "\n",
-    "rf_model_path = Path.joinpath(training_storing_folder, \"{}_{}_model.sav\".format(\n",
+    "rf_model_path = Path.joinpath(training_storing_folder, \"{}_model.sav\".format(\n",
     "    training_name,\n",
-    "    training_args_datetime.strftime(\"%Y-%m-%d\")\n",
+    "    # training_args_datetime.strftime(\"%Y-%m-%d\")\n",
     "))\n",
     "model = pickle.load(open(rf_model_path, 'rb'))\n",
     "\n",
-    "count_vectorizer_path = Path.joinpath(training_storing_folder, \"{}_{}_count_vectorizer.pkl\".format(\n",
+    "count_vectorizer_path = Path.joinpath(training_storing_folder, \"{}_count_vectorizer.pkl\".format(\n",
     "    training_name,\n",
-    "    training_args_datetime.strftime(\"%Y-%m-%d\")\n",
+    "    # training_args_datetime.strftime(\"%Y-%m-%d\")\n",
     "))\n",
     "vectorizer = pickle.load(open(count_vectorizer_path, 'rb'))\n",
     "\n",
-    "tfidf_transformer_path = Path.joinpath(training_storing_folder, \"{}_{}_tfidf.pkl\".format(\n",
+    "tfidf_transformer_path = Path.joinpath(training_storing_folder, \"{}_tfidf.pkl\".format(\n",
     "    training_name,\n",
-    "    training_args_datetime.strftime(\"%Y-%m-%d\")\n",
+    "    # training_args_datetime.strftime(\"%Y-%m-%d\")\n",
     "))\n",
     "tfidf = pickle.load(open(tfidf_transformer_path, 'rb'))\n",
     "\n",
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,8 +154,10 @@
     "# install necessary locale on linux or wsl: https://github.com/microsoft/onnxruntime/issues/13197\n",
     "\n",
     "sess = rt.InferenceSession(\n",
-    "    Path.joinpath(training_storing_folder, \"{}_{}_pipeline.onnx\".format(\n",
-    "        training_name, training_args_datetime.strftime(\"%Y-%m-%d\"))),\n",
+    "    Path.joinpath(training_storing_folder, \"{}_pipeline.onnx\".format(\n",
+    "        training_name, \n",
+    "        # training_args_datetime.strftime(\"%Y-%m-%d\")\n",
+    "        )),\n",
     "    providers=['CPUExecutionProvider']\n",
     "    )\n",
     "input_name = [inp.name for inp in sess.get_inputs()][0]     # only one input in this model\n",
@@ -163,15 +166,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([[0.03806955, 0.96193045]]), array([[0.08481341, 0.91518659]]), array([[0.0825, 0.9175]])]\n",
-      "[[array([1], dtype=int64), array([[0.03806955, 0.96193045]], dtype=float32)], [array([1], dtype=int64), array([[0.08481354, 0.91518646]], dtype=float32)], [array([1], dtype=int64), array([[0.08249998, 0.9175    ]], dtype=float32)]]\n"
+      "[array([[0.42185249, 0.57814751]]), array([[0.56239776, 0.43760224]]), array([[0.64128571, 0.35871429]])]\n",
+      "[[array([1], dtype=int64), array([[0.42185247, 0.57814753]], dtype=float32)], [array([0], dtype=int64), array([[0.5623977 , 0.43760228]], dtype=float32)], [array([0], dtype=int64), array([[0.6412858 , 0.35871425]], dtype=float32)]]\n"
      ]
     },
     {
@@ -203,6 +206,13 @@
     "    # test whether the results are the same\n",
     "    np.testing.assert_allclose(result_sklearn, result_onnx, rtol=1e-5, atol=1e-5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
