--- a/NLP/dev-workspace/topic_modelling/tm_external_test/bertopic_external_doc_smallgames_quali.ipynb
+++ b/NLP/dev-workspace/topic_modelling/tm_external_test/bertopic_external_doc_smallgames_quali.ipynb
@@ -1075,7 +1075,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Getting top N keyword is meaningless, what we want is the topic frequency table"
+    "top N keywords\n",
+    "\n",
+    "those keywords are updated keywords (based on inference result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_N_words = 10\n",
+    "topic_keywords = {}\n",
+    "\n",
+    "# for new text, we re-run the func to get the keywords on the new text\n",
+    "documents = pd.DataFrame({\"Document\": X, \"ID\": range(len(X)), 'Topic': topics})\n",
+    "topic_model._extract_topics(\n",
+    "    documents, embeddings\n",
+    ")\n",
+    "\n",
+    "for topic_id, _keywords in topic_model.get_topics().items():\n",
+    "    if topic_id not in topic_keywords:\n",
+    "        topic_keywords[topic_id] = []\n",
+    "    \n",
+    "    for i in range(top_N_words):\n",
+    "        topic_keywords[topic_id].append(_keywords[i][0])\n",
+    "\n",
+    "for topic_id, keywords in topic_keywords.items():\n",
+    "    print(f'Topic {topic_id}:')\n",
+    "    print(', '.join(keywords))\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we want is the topic frequency table"
    ]
   },
   {
@@ -1202,6 +1239,17 @@
     "# rename columns\n",
     "topic_freq.columns = ['Topic', 'Count']\n",
     "topic_freq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# also need to save the top N keywords for each topic as json\n",
+    "with open(eval_results_external_folder_path.joinpath(f'top_{top_N_words}_keywords.json'), 'w') as f:\n",
+    "    json.dump(topic_keywords, f, indent=2)"
    ]
   },
   {
